--- a/current.html
+++ b/current.html
@@ -44,6 +44,8 @@
         <label for = "Rent 1000-1200">1000-1200</label><br>
         <input type = "radio" id = "rentRange" name = "Rent 1200-1400" value = "YES">
         <label for = "Rent 1200-1400">1200-1400</label><br>
+        <input type = "radio" id = "rentRange" name = "Rent &gt;1400" value = "YES">
+        <label for = "Rent &gt;1400">&gt 1400</label><br>
         <!-- Submit Button! -->
         <button type="button" onclick="validateInput();dumpFormData()">Submit</button>
         <input type="reset" value="Reset">
