--- a/current.html
+++ b/current.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="theme1 ">
+<link rel="stylesheet" href="current.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,13 +14,14 @@
         <h2>General Questions</h2>
         <label for="addy">Enter your address:</label><br>
         <input type = "text" id = "addy" name = "address"><br>
-        <label for="status">Do you plan to resign?</label><br>
+        <label for="status">Do you plan to resign your current lease?</label><br>
         <input type="radio" id="yes" name="resign" value="YES">
         <label for="yes">Yes</label><br>
         <input type="radio" id="no" name="resign" value="NO">
         <label for="no">No</label><br>
         <input type="radio" id="undecided" name="resign" value="UNDECIDED">
         <label for="undecided">Undecided</label><br>
+        <br>
         <label for="company">Enter the rental company assoicated with your property:</label><br>
         <input type = "text" id = "company" name = "company"><br>
         <h2>Listing Details</h2>
@@ -28,6 +31,7 @@
         <input type = "number" id = "bed" name = "bedroom" min = 0 max = 9 pattern = [0-9]><br>
         <label for="bath">Bath(s)?</label><br>
         <input type = "number" id = "bath" name = "bath" min = 0 max = 9 pattern = [0-9]><br>
+        <br>
         <label for="amenities">Amenities?</label><br>
         <input type="checkbox" id="laundry" name="amenities">
         <label for="laundry">Laundry</label><br>
@@ -35,6 +39,7 @@
         <label for="furnished">Furnished</label><br>
         <input type="checkbox" id="parking" name="amenities" value="UNDECIDED">
         <label for="parking">Parking</label><br>
+        <br>
         <label for="rentRange">What is your rent range?</label><br>
         <input type = "radio" id = "rentRange" name = "Rent &lt;800" value = "YES">
         <label for = "Rent &lt;800">&lt 800</label><br>
@@ -47,8 +52,9 @@
         <input type = "radio" id = "rentRange" name = "Rent &gt;1400" value = "YES">
         <label for = "Rent &gt;1400">&gt 1400</label><br>
         <!-- Submit Button! -->
+        <br>
         <button type="button" onclick="validateInput();dumpFormData()">Submit</button>
-        <input type="reset" value="Reset">
+        <button type="reset" value="Reset">Reset</button>
     </form>
 
 </body>
